# vibe-coding

./: .copilotignore  .env.example  .gitignore  README.md  pyproject.toml
.devcontainer/: README.md  devcontainer.json
.github/: copilot-instructions.md
docs/: base_agent_guide.md  logger_guide.md  validators_guide.md
src/agent/: __init__.py  base_agent.py  context_manager.py  conversation_agent.py  factory.py  message_processor.py  models.py  response_generator.py  state_manager.py
src/agent/plugins/: base.py  calculator.py  weather.py
src/agent/tools/: web_search.py
src/config/: agent_config.py
src/examples/: README.md  advanced_agent.py  basic_usage.py  streaming_example.py
src/utils/: __init__.py  logger.py  validators.py
steps/step-01/: README.md
steps/step-02/: README.md
steps/step-03/: README.md
steps/step-04/: README.md
steps/step-05/: README.md
